--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+application.mail.lateloans.message=Atenção, você tem um empréstimo atrasado. Favor devolver o livro o mais rápido possível.
+application.mail.default.remetent=mail@libary-api.com
 
+spring.mail.protocol=smtp
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=12c8bb2a819a67
+spring.mail.password=9ebafe854e15b4
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
