Adicionando configurações para o Travis CI

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.mail.password=9ebafe854e15b4
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+management.endpoints.web.exposure.include=*
+
+logging.file=appfile.log
+
+spring.boot.admin.client.url=http://localhost:8081/
